--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "node_modules": true,
-        "output": true,
+        "output": false,
         "package-lock.json": false
     }
 }
